--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -7,7 +7,7 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to deliver
     </button>
-    <button class="btn btn-primary" cdkStepperNext>
-        <i class="fa fa-angle-right"></i> Go to Payment
+    <button class="btn btn-primary" (click)="createPaymentIntent()">
+        Go to Payment <i class="fa fa-angle-right"></i>
     </button>
 </div>
