--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -22,7 +22,7 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to address
     </button>
-    <button class="btn btn-primary" cdkStepperNext>
+    <button class="btn btn-primary" [disabled]="checkoutForm?.get('deliveryForm')?.invalid" cdkStepperNext>
         <i class="fa fa-angle-right"></i> Go to Review
     </button>
 </div>
